[package]
name = "neqo-bench"
version = "0.6.8"
authors = ["Lars Eggert <lars@eggert.org>"]
edition = "2018"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

[dependencies]
neqo-crypto = { path = "./../neqo-crypto" }
neqo-transport = { path = "./../neqo-transport" }
# neqo-common = { path="./../neqo-common" }
# neqo-http3 = { path = "./../neqo-http3" }
# neqo-qpack = { path = "./../neqo-qpack" }
# structopt = "0.3.7"
# url = "2.0"
# qlog = "0.10.0"
# mio = "0.6.17"

# [features]
# deny-warnings = []
